--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
-    "vue": "^3.0.5"
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.9"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.2",
